# LLM_microservice

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml  staging-deploy.yml
docker/: Dockerfile
docs/: architecture.md  index.md  quickstart.md  sdk.md
docs/adr/: 0001-record-architecture.md
src/llm_microservice/: __init__.py  mock_server.py  utils.py
src/llm_microservice/sdk/: __init__.py  client.py  models.py
src/llm_microservice/server/: main.py
tests/: test_completions.py
tests/integration/: conftest.py  test_endpoints.py
tests/unit/: test_auth.py  test_sdk.py  test_utils.py
