[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_microservice"
version = "1.0.0"
requires-python = ">=3.11"
license = {file = "LICENSE"}
description = "LLM microservice with vLLM"
readme = "README.md"
dependencies = [
    "fastapi~=0.111",
    "httpx",
    "pydantic~=2.6",
    "starlette>=0.37,<0.38",  # FastAPI runtime
    "uvicorn[standard]~=0.30",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
    "vllm",
]
dev = [
    "mkdocs-material~=9.5",
]

[tool.setuptools_scm]
write_to = "src/llm_microservice/_version.py"

[tool.black]
line-length = 88



[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[project.urls]
Homepage = "https://example.com"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
markers = [
  "integration: mark for integration tests",
]
